--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "await-exec": "^0.1.2",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.700.0",
+    "axios": "^0.19.2",
+    "axios-retry": "^3.1.8",
     "execa": "^4.0.2",
     "jsdom": "^16.2.2",
     "jsonpath-plus": "^4.0.0",
