--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "async": "^3.2.0",
     "await-exec": "^0.1.2",
     "aws-lambda": "^1.0.6",
